# DX7Utils

./: .gitignore  PatchSearchApp.py  README.md  analysis-todo.md  binary.py  config.json  config.py  fader_values.json  install.sh  main.py  midi.py  midibackup.py  mididebug.py  patchsearcher.py  patchsearcherback.py  patchsearchercmd.py  pyproject.toml  readsysex.py  requirements.txt  sendsysex.py
.github/workflows/: ci.yml  main  main.yml  release.yml
docs/: architecture.md  development.md  usage.md
dx7utils/: __init__.py  common.py  midi_core.py  sysex.py
scripts/: PatchSearchApp.py  config.py  sendsysex.py
src/: PatchSearchApp.py  config.py  midi.py  midibackup.py  mididebug.py  patchsearchercmd.py  ports.py  readsysex.py  sendsysex.py  ui.py
tests/: test_common.py  test_sendsysex.py  test_sysex.py
