[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dx7utils"
version = "0.1.0"
description = "Utilities for Yamaha DX7 synthesizer"
requires-python = ">=3.9"
dependencies = [
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
